--- a/Design.css
+++ b/Design.css
@@ -1,10 +1,22 @@
+body{
+    background-color: #252525;
+}
 #social_media_icon{
     width: 50px;
     height: 50px;
+    margin-left: 25px;
+    margin-right: 25px;
 }
 #pageTitle{
     font-size: 70px;
     text-align: center;
     background-color: #444444;
-    margin-top: 0%;
+    width: 100%;
+    margin-top: 0px;
+}
+.socialLinks{
+    text-align: center;
+    position: absolute;
+    bottom: 30px;
+    width: 100%;
 }
