--- a/Design.css
+++ b/Design.css
@@ -1,22 +1,33 @@
-body{
+body {
     background-color: #252525;
 }
-#social_media_icon{
+#social_media_icon {
     width: 50px;
     height: 50px;
     margin-left: 25px;
     margin-right: 25px;
+    filter: invert(100%);
 }
-#pageTitle{
+#pageTitle {
     font-size: 70px;
     text-align: center;
     background-color: #444444;
     width: 100%;
     margin-top: 0px;
 }
-.socialLinks{
+.socialLinks {
     text-align: center;
     position: absolute;
     bottom: 30px;
     width: 100%;
+}
+#social_media_icon:active {
+    transform:  translate(0px,2px);
+    -webkit-transform: translate(0px, 2px);
+
+    
+}
+#social_media_icon:hover {
+    filter: invert(60%);
+    transform: scale(1.05) perspective(1px);
 }
