--- a/Design.css
+++ b/Design.css
@@ -31,3 +31,34 @@ body {
     filter: invert(60%);
     transform: scale(1.05) perspective(1px);
 }
+.dropdownBtn {
+    width: 50px;
+    height: 50px;
+    padding: 16px;
+    font-size: 16px;
+    border-radius: 25px;
+    filter: invert(100%);
+
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {background-color: rgb(102, 102, 102);}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropdownBtn{filter: invert(50%);}
