--- a/Design.css
+++ b/Design.css
@@ -20,3 +20,9 @@ body{
     bottom: 30px;
     width: 100%;
 }
+
+.center { 
+    margin: 0 auto;
+    width: 600px;
+    vertical-align: bottom;
+ }
