Icons made white

--- a/Design.css
+++ b/Design.css
@@ -24,6 +24,7 @@ html{
     height: 50px;
     margin-left: 25px;
     margin-right: 25px;
+    filter: invert(100%);
 }
 #pageTitle{
     font-size: 70px;
