--- a/Design.css
+++ b/Design.css
@@ -34,26 +34,14 @@ body{
     color: black;
 
 }
-#social_media_icon{
-    width: 50px;
-    height: 50px;
-    margin-left: 25px;
-    margin-right: 25px;
-    filter: invert(100%);
-}
+
 #pageTitle{
     font-size: 70px;
     text-align: center;
     width: 100%;
     margin-top: 0px;
 }
-.socialLinks{
-    text-align: center;
-    position: absolute;
-    bottom: 30px;
-    width: 100%;
-}
-
+/*Video details*/
 .video { 
     position: absolute;
     margin: auto;
@@ -64,6 +52,20 @@ body{
     
     
  }
+ /*Everything connected with social media links below */
+ #social_media_icon{
+    width: 50px;
+    height: 50px;
+    margin-left: 25px;
+    margin-right: 25px;
+    filter: invert(100%);
+ }
+ .socialLinks{
+    text-align: center;
+    position: absolute;
+    bottom: 30px;
+    width: 100%;
+}
 #social_media_icon:active {
     transform:  translate(0px,2px);
     -webkit-transform: translate(0px, 2px);
@@ -74,6 +76,7 @@ body{
     filter: invert(60%);
     transform: scale(1.05) perspective(1px);
 }
+/*Everything connected with the dropdown menu */
 .dropdownBtn {
     width: 50px;
     height: 50px;
@@ -109,23 +112,3 @@ body{
     transform: scale(1.05) perspective(1px);
     cursor: pointer;
     }
-
-.cursor {
-    width: 20px;
-    height: 20px;
-    border: 1px solid white;
-    border-radius: 50%;
-    position: absolute;
-    animation: cursorAnim .5s infinite alternate;
-    z-index: inherit;
-}
-
-
-@keyframes cursorAnim {
-    from {
-        transform: scale(1);
-    }
-    to {
-        transform: scale(.7);
-    }
-}
