--- a/Design.css
+++ b/Design.css
@@ -124,46 +124,13 @@ body{
     transform: scale(1.05) perspective(1px);
     cursor: pointer;
     }
-.section-1 {
-        width: 30%;
-        height: 600px;
-        top: 10%;
-        left: 12%;
-       
-        position: absolute;
-    }
-.section-2 {
+.videosection .video {
+    background-color: red;
     width: 30%;
-    height: 300px;
-    top: 10%;
-    left: 58%;
-    
+    height: 350px;
+    left: 86%;
+    top: 30%;
     position: absolute;
-}
-.section-3 {
-    width: 30%;
-    height: 300px;
-    top: 40%;
-    left: 58%;
-    
-    position: absolute;
-}
-
-.about {
-    color: white;
-    top: 50px;
-    position: relative;
-    text-align: justify;
-    font-size: 130%;
-    line-height: 1.5em  ;
-    
-}
-
-.aboutpealkiri {
-    color: white;
-    position: relative;
-    top: 50px;
-    text-align: center;
 }
 
 /*paigutus*/
