--- a/Design.css
+++ b/Design.css
@@ -60,6 +60,14 @@ body{
     border:10px solid
     
  }
+ .videosection .video {
+    background-color: red;
+    width: 30%;
+    height: 350px;
+    left: 86%;
+    top: 30%;
+    position: absolute;
+}
  /*Everything connected with social media links below */
  #social_media_icon{
     width: 50px;
@@ -67,6 +75,7 @@ body{
     margin-left: 25px;
     margin-right: 25px;
     filter: invert(100%);
+    position: relative;
  }
  .socialLinks{
     text-align: center;
@@ -124,13 +133,3 @@ body{
     transform: scale(1.05) perspective(1px);
     cursor: pointer;
     }
-.videosection .video {
-    background-color: red;
-    width: 30%;
-    height: 350px;
-    left: 86%;
-    top: 30%;
-    position: absolute;
-}
-
-/*paigutus*/
