--- a/Design.css
+++ b/Design.css
@@ -36,7 +36,9 @@ body{
     text-align: center;
     width: 100%;
     margin-top: 0px;
-    font-family: monospace;
+    font-family: serif;
+    text-decoration: underline white;
+    color: white;
 }
 #home_lehe_info {
     position: absolute;
