--- a/aboutcss.css
+++ b/aboutcss.css
@@ -7,6 +7,7 @@ body{
     height: 100%;
     width: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #bg {
@@ -122,44 +123,61 @@ body{
 .main-div {
     display: flex;
   }
-.section-1 {
-    width: 30%;
-    height: 600px;
-    top: 10%;
-    left: 12%;
-    position: absolute;
-}
-.section-2 {
-    width: 30%;
-    height: 300px;
-    top: 10%;
-    left: 58%;
-    position: absolute;
-}
-.section-3 {
-    width: 30%;
-    height: 300px;
-    top: 40%;
-    left: 58%;
 
+.first-column {
     position: absolute;
+    top: 15%;
+    left: 5%;
+    width: 40%;
+    height: 70%;
+    font-size: 100%;
+}
+
+.second-column {
+    position: absolute;
+    top: 58%;
+    right: 5%;
+    width: 40%;
+    height: 70%;
+    font-size: 100%;
 }
 
 .about {
-color: white;
-top: 50px;
-position: relative;
-text-align: justify;
-font-size: 130%;
-line-height: 1.5em  ;
-
+    color: white;
+    top: 10%;
+    position: relative;
+    text-align: justify;
+    line-height: 1.5em  ;   
+}
+.about-2 {
+    color: white;
+    top: 10%;
+    position: relative;
+    text-align: center;
+    line-height: 1.5em  ;
+    font-size: 120%;
 }
 .aboutpealkiri {
-color: white;
-position: relative;
-top: 50px;
-text-align: center;
+    color: white;
+    position: relative;
+    top: 8%;
+    text-align: center;
 }
+.aboutpealkiri-2 {
+    color: white;
+    position: relative;
+    top: 8%;
+    text-align: center;
+}
+#profiilipilt {
+    position: absolute;
+    top: 25%;
+    right: 16.5%;
+    width: 17%;
+    height: auto;
+    border: solid white;
+}
+
 /*Popup design and logic*/
 .popup {
     color: white;
