--- a/Design.css
+++ b/Design.css
@@ -81,7 +81,7 @@ body{
  }
  .socialLinks{
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 10px;
     width: 100%;
 }
