--- a/aboutcss.css
+++ b/aboutcss.css
@@ -64,7 +64,7 @@ body{
  }
  .socialLinks{
     text-align: center;
-    position: absolute;
+    position: fixed;
     bottom: 30px;
     width: 100%;
 }
