--- a/Design.css
+++ b/Design.css
@@ -82,7 +82,7 @@ body{
  }
  .socialLinks{
     text-align: center;
-    position: fixed;
+    position: absolute;
     bottom: 10px;
     width: 100%;
 }
@@ -201,3 +201,9 @@ body{
     to {opacity:1 ;}
 }
   
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
