--- a/aboutcss.css
+++ b/aboutcss.css
@@ -65,7 +65,7 @@ body{
  }
  .socialLinks{
     text-align: center;
-    position: fixed;
+    position: absolute;
     bottom: 30px;
     width: 100%;
 }
@@ -233,4 +233,10 @@ body{
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity:1 ;}
+}
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
