--- a/Design.css
+++ b/Design.css
@@ -1,14 +1,12 @@
-body{
-    background-position: center top; 
-    background-repeat: no-repeat; 
-    background-attachment: fixed;
-    background-color: black;
+#pageTitle{
+    font-size: 70px;
     text-align: center;
-    height: 100%;
     width: 100%;
-    overflow-x: hidden;
+    margin-top: 0px;
+    font-family: serif;
+    text-decoration: underline white;
+    color: white;
 }
-
 #bg {
     position: fixed; 
     top: -50%; 
@@ -30,174 +28,3 @@ body{
     max-width: 100%;
     height: 100vh;
 }
-
-#pageTitle{
-    font-size: 70px;
-    text-align: center;
-    width: 100%;
-    margin-top: 0px;
-    font-family: serif;
-    
-    color: white;
-}
-#home_lehe_info {
-    position: absolute;
-    top: 46%;
-    left: 28%;
-    transform: translate(-50%, -50%);
-    width: 20%;
-    height: 45%;
-    font-size: x-large;
-    color: white;
-    text-align: justify;
-    line-height: 1.5em;
-}
-/*Video details*/
-.video { 
-    position: absolute;
-    margin: auto;
-    top: 50%;
-    left: 61%;
-    transform: translate(-50%, -50%);
-    border:10px solid;
-    background-color: black;
-    
- }
- .videosection .video {
-    background-color: red;
-    width: 30%;
-    height: 350px;
-    left: 86%;
-    top: 30%;
-    position: absolute;
-}
- /*Everything connected with social media links below */
- #social_media_icon{
-    width: 50px;
-    height: 50px;
-    margin-left: 25px;
-    margin-right: 25px;
-    filter: invert(100%);
-    position: relative;
- }
- .socialLinks{
-    text-align: center;
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-}
-#social_media_icon:active {
-    transform:  translate(0px,2px);
-    -webkit-transform: translate(0px, 2px);
-
-    
-}
-#social_media_icon:hover {
-    filter: invert(60%);
-    transform: scale(1.05) perspective(1px);
-}
-/*Everything connected with the dropdown menu */
-.dropdownBtn {
-    width: 50px;
-    height: 50px;
-    padding: 16px;
-    font-size: 16px;
-    border-radius: 25px;
-    filter: invert(100%);
-
-}
-
-.dropdown {
-    position: absolute;
-    top: 0%;
-    left: 0%;
-    display: inline-block;
-}
-.dropdown-content {
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-.dropdown-content a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    text-align: left;
-    display: block;
-}
-.dropdown-content button {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    text-align: left;
-    display: block;  
-}
-.dropdown-content a:hover {background-color: rgb(102, 102, 102);}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropdownBtn{
-    filter: invert(50%);
-    transform: scale(1.05) perspective(1px);
-    cursor: pointer;
-    }
-
-/*Popup design and logic*/
-.popup {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    text-align: left;
-    display: block;
-    cursor: pointer;
-    -webkit-user-select: none;        
-    -moz-user-select: none;
-    -ms-user-select: none; 
-    user-select: none;
-}
-.popup:hover {background-color: rgb(102, 102, 102);}
-/*Popup design and positioning*/
-.popup .popuptext {
-    visibility: hidden;
-    width: 300px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 8px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: -35%;
-    left: 160%;
-    margin-left: -80px;
-    -webkit-user-select: none;        
-    -moz-user-select: none;
-    -ms-user-select: none; 
-    user-select: none;
-}
-.popup .popuptext::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 0%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
-}
-.popup .show {
-    visibility: visible;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
-}
-@-webkit-keyframes fadeIn {
-    from {opacity: 0;} 
-    to {opacity: 1;}
-}
-@keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity:1 ;}
-}
-  
