--- a/skeleton.css
+++ b/skeleton.css
@@ -7,41 +7,11 @@ body{
     height: 100%;
     width: 100%;
     overflow-x: hidden;
-    overflow-y: hidden;
+}
+.main-div{
 }
 
-#bg {
-    position: fixed; 
-    top: -50%; 
-    left: -50%; 
-    width: 200%; 
-    height: 200%;
-    z-index: -10;
-    opacity: 0.2;
-}
-#bg img {
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    right: 0; 
-    bottom: 0; 
-    margin: auto; 
-    min-width: 50%;
-    min-height: 50%;
-    max-width: 100%;
-    height: 100vh;
-}
-
-#pageTitle{
-    font-size: 70px;
-    text-align: center;
-    width: 100%;
-    margin-top: 0px;
-    font-family: serif;
-    text-decoration: underline white;
-    color: white;
-}
-#home_lehe_info {
+.info-tekst {
     position: absolute;
     top: 46%;
     left: 28%;
@@ -53,7 +23,25 @@ body{
     text-align: justify;
     line-height: 1.5em;
 }
-
+/*Video details*/
+.video { 
+    position: absolute;
+    margin: auto;
+    top: 50%;
+    left: 61%;
+    transform: translate(-50%, -50%);
+    border:10px solid;
+    background-color: black;
+    
+ }
+ .videosection .video {
+    background-color: red;
+    width: 30%;
+    height: 350px;
+    left: 86%;
+    top: 30%;
+    position: absolute;
+}
  /*Everything connected with social media links below */
  #social_media_icon{
     width: 50px;
@@ -66,7 +54,7 @@ body{
  .socialLinks{
     text-align: center;
     position: absolute;
-    bottom: 30px;
+    bottom: 10px;
     width: 100%;
 }
 #social_media_icon:active {
@@ -110,6 +98,13 @@ body{
     text-align: left;
     display: block;
 }
+.dropdown-content button {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: left;
+    display: block;  
+}
 .dropdown-content a:hover {background-color: rgb(102, 102, 102);}
 
 .dropdown:hover .dropdown-content {display: block;}
@@ -119,64 +114,6 @@ body{
     transform: scale(1.05) perspective(1px);
     cursor: pointer;
     }
-/*Web page placement logic */
-.main-div {
-    display: flex;
-  }
-
-.first-column {
-    position: absolute;
-    top: 15%;
-    left: 5%;
-    width: 40%;
-    height: 70%;
-    font-size: 100%;
-}
-
-.second-column {
-    position: absolute;
-    top: 58%;
-    right: 5%;
-    width: 40%;
-    height: 70%;
-    font-size: 100%;
-}
-
-.about {
-    color: white;
-    top: 10%;
-    position: relative;
-    text-align: justify;
-    line-height: 1.5em  ;   
-}
-.about-2 {
-    color: white;
-    top: 10%;
-    position: relative;
-    text-align: center;
-    line-height: 1.5em  ;
-    font-size: 120%;
-}
-.aboutpealkiri {
-    color: white;
-    position: relative;
-    top: 8%;
-    text-align: center;
-}
-.aboutpealkiri-2 {
-    color: white;
-    position: relative;
-    top: 8%;
-    text-align: center;
-}
-#profiilipilt {
-    position: absolute;
-    top: 25%;
-    right: 16.5%;
-    width: 17%;
-    height: auto;
-    border: solid white;
-}
 
 /*Popup design and logic*/
 .popup {
@@ -234,3 +171,4 @@ body{
     from {opacity: 0;}
     to {opacity:1 ;}
 }
+  
