--- a/Favourites.css
+++ b/Favourites.css
@@ -7,6 +7,7 @@ body{
     height: 100%;
     width: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 #bg {
@@ -37,7 +38,7 @@ body{
     width: 100%;
     margin-top: 0px;
     font-family: serif;
-    
+    text-decoration: underline white;
     color: white;
 }
 #home_lehe_info {
@@ -45,32 +46,14 @@ body{
     top: 46%;
     left: 28%;
     transform: translate(-50%, -50%);
-    width: 30%;
+    width: 20%;
     height: 45%;
     font-size: x-large;
     color: white;
     text-align: justify;
     line-height: 1.5em;
 }
-/*Video details*/
-.video { 
-    position: absolute;
-    margin: auto;
-    top: 50%;
-    left: 68%;
-    transform: translate(-50%, -50%);
-    border:10px solid;
-    background-color: black;
-    
- }
- .videosection .video {
-    background-color: red;
-    width: 30%;
-    height: 350px;
-    left: 86%;
-    top: 30%;
-    position: absolute;
-}
+
  /*Everything connected with social media links below */
  .social_media_icon{
     width: 50px;
@@ -83,16 +66,16 @@ body{
  .socialLinks{
     text-align: center;
     position: absolute;
-    bottom: 10px;
+    bottom: 30px;
     width: 100%;
 }
-#social_media_icon:active {
+.social_media_icon:active {
     transform:  translate(0px,2px);
     -webkit-transform: translate(0px, 2px);
 
     
 }
-#social_media_icon:hover {
+.social_media_icon:hover {
     filter: invert(60%);
     transform: scale(1.05) perspective(1px);
 }
@@ -137,6 +120,52 @@ body{
     transform: scale(1.05) perspective(1px);
     cursor: pointer;
     }
+/*Web page placement logic */
+.main-div {
+    display: flex;
+  }
+
+.first-column {
+    position: absolute;
+    top: 25%;
+    left: 10%;
+    width: 40%;
+    height: 70%;
+    font-size: 100%;
+}
+
+.second-column {
+    position: absolute;
+    top: 25%;
+    right: 10%;
+    width: 40%;
+    height: 70%;
+    font-size: 100%;
+}
+
+.drummername {
+    color: white;
+    top: 0%;
+    position: relative;
+    text-align: center;
+    line-height: 1.5em;
+    font-size: 120%;   
+}
+
+.favouritespealkiri {
+    color: white;
+    position: relative;
+    top: 20%;
+    text-align: center;
+}
+.drummerpicture {
+    position: center;
+    top: 0%;
+    right: 16.5%;
+    width: 50%;
+    height: auto;
+    border: solid white;
+}
 
 /*Popup design and logic*/
 .popup {
@@ -194,7 +223,6 @@ body{
     from {opacity: 0;}
     to {opacity:1 ;}
 }
-  
 .footer {
     position: fixed;
     left: 0;
