--- a/aboutcss.css
+++ b/aboutcss.css
@@ -55,7 +55,7 @@ body{
 }
 
  /*Everything connected with social media links below */
- #social_media_icon{
+ .social_media_icon{
     width: 50px;
     height: 50px;
     margin-left: 25px;
@@ -69,13 +69,13 @@ body{
     bottom: 30px;
     width: 100%;
 }
-#social_media_icon:active {
+.social_media_icon:active {
     transform:  translate(0px,2px);
     -webkit-transform: translate(0px, 2px);
 
     
 }
-#social_media_icon:hover {
+.social_media_icon:hover {
     filter: invert(60%);
     transform: scale(1.05) perspective(1px);
 }
@@ -87,7 +87,6 @@ body{
     font-size: 16px;
     border-radius: 25px;
     filter: invert(100%);
-
 }
 
 .dropdown {
@@ -96,11 +95,13 @@ body{
     left: 0%;
     display: inline-block;
 }
+
 .dropdown-content {
     display: none;
     position: absolute;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    background-color:rgba(122, 122, 122, 0.2);
+    /*box-shadow: 0px 8px 16px 0px rgba(15, 15, 15, 0.2);*/
     z-index: 1;
 }
 .dropdown-content a {
@@ -127,7 +128,7 @@ body{
 .first-column {
     position: absolute;
     top: 15%;
-    left: 5%;
+    left: 10%;
     width: 40%;
     height: 70%;
     font-size: 100%;
@@ -203,7 +204,7 @@ body{
     padding: 8px 0;
     position: absolute;
     z-index: 1;
-    bottom: -35%;
+    bottom: 20%;
     left: 160%;
     margin-left: -80px;
     -webkit-user-select: none;        
