--- a/Design.css
+++ b/Design.css
@@ -1,3 +1,13 @@
+body{
+    background-position: center top; 
+    background-repeat: no-repeat; 
+    background-attachment: fixed;
+    background-color: black;
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    overflow-x: hidden;
+}
 #pageTitle{
     font-size: 70px;
     text-align: center;
@@ -27,49 +37,6 @@
     min-height: 50%;
     max-width: 100%;
     height: 100vh;
-<<<<<<< HEAD
-=======
-}
-
-#pageTitle{
-    font-size: 70px;
-    text-align: center;
-    width: 100%;
-    margin-top: 0px;
-    font-family: serif;
-    
-    color: white;
-}
-#home_lehe_info {
-    position: absolute;
-    top: 46%;
-    left: 28%;
-    transform: translate(-50%, -50%);
-    width: 20%;
-    height: 45%;
-    font-size: x-large;
-    color: white;
-    text-align: justify;
-    line-height: 1.5em;
-}
-/*Video details*/
-.video { 
-    position: absolute;
-    margin: auto;
-    top: 50%;
-    left: 61%;
-    transform: translate(-50%, -50%);
-    border:10px solid;
-    background-color: black;
-    
- }
- .videosection .video {
-    background-color: red;
-    width: 30%;
-    height: 350px;
-    left: 86%;
-    top: 30%;
-    position: absolute;
 }
  /*Everything connected with social media links below */
  #social_media_icon{
@@ -199,12 +166,4 @@
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity:1 ;}
-}
-  
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
->>>>>>> bdf582c94cb8e3cfa732d3dbb69c3d7f91703c21
 }
