--- a/Design.css
+++ b/Design.css
@@ -50,25 +50,7 @@
     text-align: justify;
     line-height: 1.5em;
 }
-/*Video details*/
-.video { 
-    position: absolute;
-    margin: auto;
-    top: 50%;
-    left: 68%;
-    transform: translate(-50%, -50%);
-    border:10px solid;
-    background-color: black;
-    
- }
- .videosection .video {
-    background-color: red;
-    width: 30%;
-    height: 350px;
-    left: 86%;
-    top: 30%;
-    position: absolute;
-}
+
  /*Everything connected with social media links below */
  .social_media_icon{
     width: 50px;
@@ -81,16 +63,16 @@
  .socialLinks{
     text-align: center;
     position: absolute;
-    bottom: 10px;
+    bottom: 30px;
     width: 100%;
 }
-#social_media_icon:active {
+.social_media_icon:active {
     transform:  translate(0px,2px);
     -webkit-transform: translate(0px, 2px);
 
     
 }
-#social_media_icon:hover {
+.social_media_icon:hover {
     filter: invert(60%);
     transform: scale(1.05) perspective(1px);
 }
