--- a/Design.css
+++ b/Design.css
@@ -8,6 +8,7 @@ body{
     width: 100%;
     overflow-x: hidden;
 }
+
 #pageTitle{
     font-size: 70px;
     text-align: center;
@@ -47,12 +48,7 @@ body{
     filter: invert(100%);
     position: relative;
  }
- .socialLinks{
-    text-align: center;
-    position: absolute;
-    bottom: 30px;
-    width: 100%;
-}
+
 .social_media_icon:active {
     transform:  translate(0px,2px);
     -webkit-transform: translate(0px, 2px);
@@ -160,4 +156,12 @@ body{
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity:1 ;}
+}
+.footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding-top: 5rem;
+    text-align: center;
 }
