--- a/Favourites.css
+++ b/Favourites.css
@@ -2,6 +2,7 @@
  .social_media_icon{
     width: 50px;
     height: 50px;
+    margin-top: 100px;
     margin-left: 25px;
     margin-right: 25px;
     margin-bottom:30px;
