--- a/Favourites.css
+++ b/Favourites.css
@@ -5,6 +5,7 @@
     margin-left: 25px;
     margin-right: 25px;
     margin-bottom:30px;
+    margin-top: 100px;
     filter: invert(100%);
     position: relative;
  }
@@ -18,7 +19,6 @@
     transform:  translate(0px,2px);
     -webkit-transform: translate(0px, 2px);
 
-    
 }
 .social_media_icon:hover {
     filter: invert(60%);
